Refined the views for different roles